[gd_scene load_steps=23 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://SPRING.tscn" type="PackedScene" id=2]
[ext_resource path="res://Position2D.gd" type="Script" id=3]
[ext_resource path="res://Node.gd" type="Script" id=4]
[ext_resource path="res://Tileset/Fondo.png" type="Texture" id=5]
[ext_resource path="res://NivelTutorial.gd" type="Script" id=6]
[ext_resource path="res://Tileset/CARTEL1.png" type="Texture" id=7]
[ext_resource path="res://Tileset/CARTEL2.png" type="Texture" id=8]
[ext_resource path="res://Tileset/CARTEL3.png" type="Texture" id=9]
[ext_resource path="res://AnimationPlayer.gd" type="Script" id=10]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=11]
[ext_resource path="res://enemy.tscn" type="PackedScene" id=12]
[ext_resource path="res://enemigo_tipo_1.gd" type="Script" id=13]
[ext_resource path="res://NivelBoss.gd" type="Script" id=14]
[ext_resource path="res://player.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sounds del juego/222656__zagi2__game-loop - copia.wav" type="AudioStream" id=16]
[ext_resource path="res://backgroundMusic.gd" type="Script" id=17]
[ext_resource path="res://Sounds del juego/443196__suburbanwizard__synthwave.wav" type="AudioStream" id=18]
[ext_resource path="res://bossMusic.gd" type="Script" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 175.137, 56.802 )

[sub_resource type="Animation" id=2]
resource_name = "Nueva animación"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 468.419, -83.9374 ), Vector2( 468.419, 218.232 ) ]
}

[sub_resource type="Environment" id=3]
ambient_light_color = Color( 1, 1, 1, 1 )
fog_color = Color( 0.2, 0.454902, 0.721569, 1 )
glow_enabled = true
glow_intensity = 8.0
glow_strength = 2.0
glow_bloom = 1.0
glow_hdr_threshold = 0.0
glow_hdr_luminance_cap = 31.06

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( 70.7892, 704 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 514.206, 0 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Position2D"]
position = Vector2( 0, 298.957 )
current = true

[node name="Viewport" type="Viewport" parent="Position2D/Camera2D"]

[node name="Control" type="Control" parent="Position2D/Camera2D"]
editor/display_folded = true
visible = false
margin_left = -514.206
margin_top = -298.957
margin_right = -474.206
margin_bottom = -258.957

[node name="CenterContainer" type="CenterContainer" parent="Position2D/Camera2D/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 989.0
margin_bottom = 561.0

[node name="VBoxContainer" type="VBoxContainer" parent="Position2D/Camera2D/Control/CenterContainer"]
margin_left = 489.0
margin_top = 290.0
margin_right = 540.0
margin_bottom = 310.0

[node name="HBoxContainer" type="HBoxContainer" parent="Position2D/Camera2D/Control/CenterContainer/VBoxContainer"]
margin_right = 51.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="Position2D/Camera2D/Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 51.0
margin_bottom = 20.0
text = "Retry?"

[node name="Node" type="Node2D" parent="."]
position = Vector2( 514.206, 298.957 )
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 300 )
texture = ExtResource( 5 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 2048, 0 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 513.857, 299.505 )
texture = ExtResource( 5 )

[node name="NivelTutorial" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 6 )

[node name="Node2D2" type="Node2D" parent="NivelTutorial"]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="NivelTutorial/Node2D2"]
position = Vector2( 468.419, -83.9374 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="NivelTutorial/Node2D2"]
position = Vector2( 743.947, 103.634 )
texture = ExtResource( 8 )

[node name="Sprite3" type="Sprite" parent="NivelTutorial/Node2D2"]
position = Vector2( 203.568, 96.2319 )
texture = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="NivelTutorial/Node2D2"]
position = Vector2( 256, 517.203 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NivelTutorial/Node2D2/Area2D"]
scale = Vector2( 1.46171, 1.12672 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NivelTutorial/Node2D2"]
"anims/Nueva animación" = SubResource( 2 )
script = ExtResource( 10 )

[node name="StaticBody2D" parent="NivelTutorial" instance=ExtResource( 11 )]
position = Vector2( 83.4851, 223.892 )

[node name="StaticBody2D2" parent="NivelTutorial" instance=ExtResource( 11 )]
position = Vector2( 240.084, 307.377 )

[node name="StaticBody2D3" parent="NivelTutorial" instance=ExtResource( 11 )]
position = Vector2( 535.064, 432.605 )

[node name="StaticBody2D4" parent="NivelTutorial" instance=ExtResource( 11 )]
position = Vector2( 956.285, 239.071 )

[node name="StaticBody2D5" parent="NivelTutorial" instance=ExtResource( 11 )]
position = Vector2( 762.751, 345.325 )

[node name="enemy3" parent="NivelTutorial" instance=ExtResource( 12 )]
position = Vector2( 954.109, 175.732 )
script = ExtResource( 13 )

[node name="Nivel1" type="Node2D" parent="."]
position = Vector2( 1117.67, 0.029417 )

[node name="Nivel2" type="Node2D" parent="."]
position = Vector2( 2555.54, -10.1869 )

[node name="Nivel3" type="Node2D" parent="."]
position = Vector2( 4160, -6.9374 )

[node name="Nivel4" type="Node2D" parent="."]
position = Vector2( 5760, -0.994995 )

[node name="Nivel5" type="Node2D" parent="."]
position = Vector2( 7232, 7.7319 )

[node name="NivelBoss" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 8744, 0 )
script = ExtResource( 14 )

[node name="StaticBody2D" parent="NivelBoss" instance=ExtResource( 11 )]
position = Vector2( 1075.85, 404.308 )

[node name="StaticBody2D2" parent="NivelBoss" instance=ExtResource( 11 )]
position = Vector2( 499.85, 341.457 )

[node name="StaticBody2D3" parent="NivelBoss" instance=ExtResource( 11 )]
position = Vector2( 821.069, 345.325 )

[node name="StaticBody2D4" parent="NivelBoss" instance=ExtResource( 11 )]
position = Vector2( 243.85, 404.308 )

[node name="StaticBody2D5" parent="NivelBoss" instance=ExtResource( 11 )]
position = Vector2( 659.065, 512 )

[node name="StaticBody2D6" parent="NivelBoss" instance=ExtResource( 11 )]
position = Vector2( 408, 512 )

[node name="StaticBody2D7" parent="NivelBoss" instance=ExtResource( 11 )]
position = Vector2( 920, 512 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="player" parent="." instance=ExtResource( 15 )]
position = Vector2( 64, -150 )

[node name="backgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
autoplay = true
script = ExtResource( 17 )

[node name="bossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
script = ExtResource( 19 )
[connection signal="repel" from="StaticBody2D2" to="player" method="_on_StaticBody2D2_repel"]
[connection signal="final_showdown" from="Position2D" to="." method="_on_Position2D_final_showdown"]
[connection signal="pressed" from="Position2D/Camera2D/Control/CenterContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="NivelTutorial/Node2D2/Area2D" to="NivelTutorial/Node2D2/AnimationPlayer" method="_on_Area2D_body_entered"]
[connection signal="player_died" from="player" to="." method="_on_player_player_died"]
[connection signal="finished" from="backgroundMusic" to="backgroundMusic" method="_on_backgroundMusic_finished"]
[connection signal="finished" from="bossMusic" to="bossMusic" method="_on_bossMusic_finished"]
